Changed Tim's Google Analytics

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,12 +1,12 @@
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EWMFHWFW20"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3MVMRG3705"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-EWMFHWFW20');
+    gtag('config', 'G-3MVMRG3705');
   </script>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
